# BidReview

./: .gitignore  AGENTS.md  README.md  pyproject.toml  xuqiu.md
bidagent/: __init__.py  __main__.py  annotators.py  atomic.py  cli.py  consistency.py  constraints.py  doc_map.py  document.py  entity_pool.py  eval.py  evidence_harvester.py  evidence_index.py  io_utils.py  llm.py  llm_judge.py  models.py  ocr.py  pipeline.py  review.py  task_planner.py  verdict_policy.py
docs/: bid-review-architecture-blueprint.md  l3-lane-cards.md  l3-task-board.md  l3-test-matrix.md  task-template.md  workflow-checklist.md
docs/goldset/: l3-gold.jsonl
docs/tasks/: TASK-2026-02-15-cli-v0.1.md  TASK-2026-02-15-cli-v0.2-reviewlist.md  TASK-2026-02-15-cli-v0.3-deepseek.md  TASK-2026-02-15-code-review-0a86369.md  TASK-2026-02-15-code-review-89d26d7.md  TASK-2026-02-15-code-review-fixes-trace-sanitize.md  TASK-2026-02-15-r1-trace-closed-loop.md  TASK-2026-02-15-r2-ocr-observability.md  TASK-2026-02-15-r4-rule-tier.md  (+12 more)
scripts/: check-task-cards.ps1  test-matrix.ps1  validate-goldset.py  verify.ps1
tests/: test_annotate_output.py  test_atomic.py  test_checklist.py  test_cli_smoke.py  test_consistency.py  test_constraints.py  test_deepseek_reviewer.py  test_doc_map.py  test_entity_pool.py  test_eval.py  test_evidence_harvester.py  test_evidence_index.py  test_goldset_validation.py  test_llm_judge.py  test_llm_review.py  test_ocr.py  test_pipeline_pdf_ocr_smoke.py  test_pipeline_review.py  test_report.py  test_review.py  test_rule_tier.py  test_task_planner.py  test_verdict_policy.py
